Finalized platformer game

--- a/fsd-projects/platformer/platformer.css
+++ b/fsd-projects/platformer/platformer.css
@@ -3,7 +3,7 @@ body {
 }
 
 canvas {
-  background-color: lightblue;
+  background-image: url(https://static.vecteezy.com/system/resources/previews/050/498/533/non_2x/hand-painted-sky-illustration-blue-sky-and-colorful-cloud-background-free-vector.jpg);
   margin: 20px;
 }
 
