--- a/style.css
+++ b/style.css
@@ -21,11 +21,13 @@ nav {
 
 #nav-ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
 }
 
+h1 {
+  display: flex;
+  flex: 1;
+  margin: auto;
+}
 .nav-li {
     display: inline-block;
     padding: 0 10px;
@@ -41,6 +43,7 @@ main {
     background: aliceblue;
     display: flex;
     margin-top: 20px;
+    border-radius: 20px;
 }
 
 .sidebar {
